OAuth 7.x-3.2, 2013-24-01
------------------------------
Issue #1987350 by juampy: Fixed Warnings when authorizing a consumer via the user interface.
Issue #1907970 by John Franklin: Fixed patch files snuck into the repository.
Issue #1809068 by kylebrowning, MrMaksimize, Deciphered: Fixed Cannot leave callback formfield blank even though it is not required.
Issue #1976504 by rj, Pancho and Nick_vh: Fixed Notice: Undefined index: Auth in OAuthUtil::get_headers()
Issue #1310984 by aadityawalawalkar | basht: Fixed PDOException with PostgreSQL when viewing page /user/1 if OAuth Provider UI in on.

OAuth 7.x-3.1, 2013-2-3
------------------------------
#1529166 by barraponto: implement hook_requirements() to check that cURL library is available.
#1535764 by bojanz: Signature selection in includes/DrupalOAuthServer.inc is broken.
#1133778 by eojthebrave | JGonzalez: Added Permissions to remove Authorization tab from user profile page.
#1809068 by kylebrowning, MrMaksimize: Fixed Cannot set custom callback for iOS application.

OAuth 7.x-3.0, 2012-2-8
------------------------------
#1378078 by jobeirne: Make Authorizations editable.
#1412226 by jobeirne, sun: allow for deletion of authentications.
#54136 by sun: fix cancel button for authentication delete form.
#1412258 by jobeirne: authentication_options fix

OAuth 7.x-3.0-alpha2, 2011-10-25
------------------------------
#1155760 by deviantintegral, voxpelli: Catching more exceptions, eg. when the consumer key is incorrect
#1199360 by Sepehr Lajevardi, voxpelli: Fixed E_NOTICE in OAuth request context loader
#1199346 by Sepehr Lajevardi: Fixed E_NOTICE in oauth_common_form_consumer_submit()
#1134444 by grendzy, voxpelli: Warn if Autoload 2.x isn't used
#1141658 by grendzy, voxpelli: Clear Autoload cache on install
#1201166 by voxpelli: Fixed error on deletion of accounts

OAuth 7.x-3.0-alpha1, 2011-06-21
------------------------------
by voxpelli: Initial port to Drupal 7

OAuth 6.x-3.0-beta4, 2011-04-06