@@ -3,6 +3,7 @@
 class DrupalOAuthToken extends OAuthToken {
   public $tid = 0;
   public $expires = 0;
+  public $callback_url = "";
   public $type = OAUTH_COMMON_TOKEN_TYPE_REQUEST;
   public $uid = 0;
 
@@ -76,13 +77,14 @@ class DrupalOAuthToken extends OAuthToken {
     }
 
     $values = array(
-      'csid'      => $this->consumer->csid,
-      'key_hash'  => sha1($this->key),
-      'token_key' => $this->key,
-      'secret'    => $this->secret,
-      'expires'   => $this->expires,
-      'type'      => $this->type,
-      'uid'       => $this->uid,
+      'csid'          => $this->consumer->csid,
+      'key_hash'      => sha1($this->key),
+      'token_key'     => $this->key,
+      'secret'        => $this->secret,
+      'expires'       => $this->expires,
+      'type'          => $this->type,
+      'uid'           => $this->uid,
+      'callback_url'  => $this->callback_url,
     );
 
     if ($update) {
