@@ -95,7 +95,7 @@ projects:
       branch: 7.x-1.x
 
   oauth:
-    version: "3.2"
+    version: "3.3"
 
   observer:
     version: "1.0"
